@@ -1,9 +1,10 @@
 Changelog
 
-$Id: Changes,v 1.84 2011-03-28 05:43:41 oops Exp $
+$Id: Changes,v 1.85 2011-03-28 06:07:07 oops Exp $
 
 * Mon, Mar 28 2011
 	- changed proto type of dec2bin, long2bin api
+	- oc_malloc_originate padding 0 on default.
 
 * Sun, Mar 27 2011
 	- removed human_size_r
